# diesel-thingy

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  models.rs  posts.rs
