[package]
name = "diesel-thingy"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-valid = "0.18.0"

diesel = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }

dotenvy = "0.15"

serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
